--- a/balao.html
+++ b/balao.html
@@ -63,8 +63,8 @@
                     delectus asperiores nisi alias accusantium, reiciendis laboriosam, sed tenetur repellat tempora
                     quam! Voluptatem atque alias culpa in!
                 </p>
-              
-             <a href="" class="botaohome">Checar Disponibilidade</a>
+
+                <a href="" class="botaohome">Checar Disponibilidade</a>
 
             </div>
 
@@ -73,10 +73,42 @@
 
     </main>
 
-    <section class="">
-        
+    <section class="sessao2">
+
+        <div class="img2">
+            <img src="imagens/street-3205265_1280.jpg" alt="Imagem de londres">
+        </div>
+
+        <div class="div2">
+            <p class="ps2">
+                <span>Lorem </span>ipsum, dolor sit amet consectetur adipisicing elit. Tenetur porro dignissimos fuga
+                excepturi atque nobis quia labore, ut perferendis alias id temporibus facilis amet saepe laudantium
+                laborum omnis quam at.
+            </p>
+
+        </div>
+
+
     </section>
 
+    <section class="sessao3">
+
+        <div class="divs3">
+
+            <p class="ps3">
+                <span>Lorem</span>ipsum dolor sit amet consectetur adipisicing elit. Illum, est dolore voluptas
+                doloremque tempore, minima eveniet excepturi, quibusdam vitae ipsam commodi obcaecati incidunt. Fugit
+                aliquam reprehenderit distinctio at! Accusamus, consequuntur.
+            </p>
+
+
+
+        </div>
+
+        <img src="imagens/business-8054608_640.jpg" alt="CEO dá empresa">
+
+
+    </section>
 
 
 
