--- a/balao.html
+++ b/balao.html
@@ -81,9 +81,12 @@
 
         <div class="div2">
             <p class="ps2">
-                <span>Lorem </span>ipsum, dolor sit amet consectetur adipisicing elit. Tenetur porro dignissimos fuga
-                excepturi atque nobis quia labore, ut perferendis alias id temporibus facilis amet saepe laudantium
-                laborum omnis quam at.
+                <span>Viajar</span> até nossos clientes traz diversos benefícios que impactam diretamente na qualidade
+                do serviço prestado. Estar presente fisicamente nos aproxima do cliente, permitindo uma compreensão mais
+                profunda de suas necessidades específicas e do contexto local. Isso resulta em respostas mais ágeis e
+                soluções personalizadas. Além disso, fortalece o relacionamento, gera confiança e demonstra nosso real
+                comprometimento. A presença no campo também possibilita identificar oportunidades que só são visíveis
+                pessoalmente, contribuindo para entregas mais eficazes e estratégicas.
             </p>
 
         </div>
@@ -96,21 +99,68 @@
         <div class="divs3">
 
             <p class="ps3">
-                <span>Lorem</span>ipsum dolor sit amet consectetur adipisicing elit. Illum, est dolore voluptas
-                doloremque tempore, minima eveniet excepturi, quibusdam vitae ipsam commodi obcaecati incidunt. Fugit
-                aliquam reprehenderit distinctio at! Accusamus, consequuntur.
+                Nossa <span>CEO</span> fundou a empresa movida por um desafio real que viveu no mercado.
+                Percebeu uma lacuna importante na forma como as soluções eram entregues aos clientes.
+                Com visão prática e espírito empreendedor, decidiu criar algo diferente.
+                Começou com poucos recursos, mas com muita determinação.
+                Construiu a empresa com foco em resultado, proximidade e excelência.
+                Reuniu um time comprometido com os mesmos valores.
+                Hoje, seguimos crescendo com a mesma paixão que inspirou o início.
+
             </p>
 
 
 
         </div>
 
-        <img src="imagens/business-8054608_640.jpg" alt="CEO dá empresa">
+        <img src="imagens/business-8054608_640.jpg" alt="CEO dá empresa" class="imgd3">
 
 
     </section>
 
+    <section class="sessao4">
 
+        <button class="bs3">Planeje Sua viagem</button>
+
+    </section>
+
+    <main>
+
+        <footer>
+
+            <div>
+
+                <img src="imagens/balloon.png" alt="logo-footer" class="imgf">
+
+            </div>
+
+            <div class="divfooter2">
+                <p>
+                    © 2025 [Cai Cai Balão Air Lines]. Todos os direitos reservados.
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-youtube"></i>
+                </p>
+
+            </div>
+
+       
+        </footer>
+
+
+    </main>
+
+
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
 
 </body>
 
