--- a/balao.html
+++ b/balao.html
@@ -40,8 +40,8 @@
         </div>
 
         <button class="hambuerger" id="hambuergerbutton">
-            <i class="fa-soli fa-bars"></i>
-        </button>
+            <i class="fa-solid fa-bars"></i>
+           </button>
 
     </header>
 
